--- a/src/dislife-catalog-volonter.html
+++ b/src/dislife-catalog-volonter.html
@@ -18,7 +18,7 @@
         <h2 class="h2 h2_md">Все помощники</h2>
       </div>
       <div class="catalog__btn">
-        <a href="#" class="btn-full btn-full_grad-orange"><span>Хочу помогать</span></a>
+        <a href="#" class="btn-full btn-full_grad-orange js-open-popup" data-link="popup-catalog"><span>Хочу помогать</span></a>
       </div>
       <div class="catalog__filters-block">
         //=include partials/filters-block.html
@@ -45,6 +45,7 @@
 </div>
 <!-- END out-->
 //=include partials/popups.html
+//=include partials/popups-volonter.html
 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 <script src="js/new-app-2.js"></script>
 </body>
