--- a/src/dislife-account-volonter.html
+++ b/src/dislife-account-volonter.html
@@ -56,13 +56,13 @@
             <div class="applications-section__filter-tags">
               <!-- begin filter-tags -->
               <div class="filter-tags has-no-padding">
-                <button class="filter-tag filter-tag_mob-full is-fz-smaller">
+                <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller" data-target-tab="approved">
                   <span class="filter-tag__lable">Вы выбраны <span>(2)</span></span>
                 </button>
-                <button class="filter-tag filter-tag_mob-full is-fz-smaller">
+                <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller" data-target-tab="wait">
                   <span class="filter-tag__lable">Ожидают подтверждения <span>(2)</span></span>
                 </button>
-                <button class="filter-tag filter-tag_mob-full is-fz-smaller is-active">
+                <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller is-active" data-target-tab="all">
                   <span class="filter-tag__lable">Все <span>(4)</span></span>
                 </button>
               </div>
@@ -119,7 +119,9 @@
 </div>
 <!-- END out-->
 //=include partials/popups.html
+//=include partials/popups-volonter.html
 <script src="js/rating.js"></script>
 <script src="js/toggle.js"></script>
+<script src="js/new-app-2.js"></script>
 </body>
 </html>
