--- a/src/dislife-all-applications.html
+++ b/src/dislife-all-applications.html
@@ -34,17 +34,17 @@
         <div class="all-applications__map-tags">
           <!-- begin map-tabs -->
           <div class="map-tags">
-            <button class="map-tag js-tab-btn is-active" data-tab-target="applications">
+            <button class="map-tag js-tabs-btn is-active" data-target-tab="applications">
               <span class="map-tag__lable">Список заявок</span>
             </button>
-            <button class="map-tag js-tab-btn" data-tab-target="map">
+            <button class="map-tag js-tabs-btn" data-target-tab="map">
               <span class="map-tag__lable">Карта</span>
             </button>
           </div>
           <!-- end map-tabs -->
         </div>
 
-        <div class="all-applications__left is-active js-tabs-content-item" data-tab="applications">
+        <div class="all-applications__left is-active js-tabs-item" data-tab="applications">
           <div class="all-applications__applications">
             
 
@@ -80,109 +80,7 @@
                     <span>Добавлено: 5 минут назад</span>
                   </div>
                 </div>
-                <div class="request-item__map-btn">
-                  <img src="img/volonter/map-btn-icon.png" alt="">
-                  <a class="map-btn__show is-active" href="#">Смотреть на карте</a>
-                  <a class="map-btn__hide" href="#">Скрыть карту</a>
-                </div>
-                <div class="request-item__btn">
-                  <a href="#" class="btn-full btn-full_grad-orange"><span>Могу помочь</span></a>
-                </div>
-              </div>
-
-            </div>
-            <!-- end request-item -->
-
-            <!-- begin request-item -->
-            <div class="request-item request-item_big request-item_no-cols">
-
-
-              <div class="request-item_big__top">
-                <div class="request-item_big__title">
-                  <h4 class="h4 h4_md">Подвезти на машине</h4>
-                </div>
-                <div class="request-item_big__top-right">
-                  <div class="request-item__date">
-                    <p>До 12 февраля, 12:00</p>
-                  </div>
-                  <div class="request-item_big__link">
-                    <a href="#">Ссылка на конкретную заявку</a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="request-item_big__block">
-                <div class="request-item__contacts">
-                  <div class="request-item__contacts-field">
-                    <div class="request-item__icon is-green"><i>A</i></div>
-                    <div class="request-item__contact">г.Москва, ул. Сиреневая, д.21</div>
-                  </div>
-                  <div class="request-item__contacts-field">
-                    <div class="request-item__icon is-gray"><i>B</i></div>
-                    <div class="request-item__contact">г.Москва, ул. Алтуфьевское шоссе, д.34</div>
-                  </div>
-                </div>
-                <div class="request-item__person">
-                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
-                  <div class="request-item__person-name">
-                    Тамара Васильевна
-                    <span>Добавлено: 5 минут назад</span>
-                  </div>
-                </div>
-                <div class="request-item__map-btn">
-                  <img src="img/volonter/map-btn-icon.png" alt="">
-                  <a class="map-btn__show is-active" href="#">Смотреть на карте</a>
-                  <a class="map-btn__hide" href="#">Скрыть карту</a>
-                </div>
-                <div class="request-item__btn">
-                  <a href="#" class="btn-full btn-full_grad-orange"><span>Могу помочь</span></a>
-                </div>
-              </div>
-
-            </div>
-            <!-- end request-item -->
-
-            <!-- begin request-item -->
-            <div class="request-item request-item_big request-item_no-cols">
-
-
-              <div class="request-item_big__top">
-                <div class="request-item_big__title">
-                  <h4 class="h4 h4_md">Подвезти на машине</h4>
-                </div>
-                <div class="request-item_big__top-right">
-                  <div class="request-item__date">
-                    <p>До 12 февраля, 12:00</p>
-                  </div>
-                  <div class="request-item_big__link">
-                    <a href="#">Ссылка на конкретную заявку</a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="request-item_big__block">
-                <div class="request-item__contacts">
-                  <div class="request-item__contacts-field">
-                    <div class="request-item__icon is-green"><i>A</i></div>
-                    <div class="request-item__contact">г.Москва, ул. Сиреневая, д.21</div>
-                  </div>
-                  <div class="request-item__contacts-field">
-                    <div class="request-item__icon is-gray"><i>B</i></div>
-                    <div class="request-item__contact">г.Москва, ул. Алтуфьевское шоссе, д.34</div>
-                  </div>
-                </div>
-                <div class="request-item_big__descr">
-                  <p>Подопечная семья (Юлия и Маша) детской выездной паллиативной службы в Москве едет в Курган на операцию ребенку с инвалидностью (тяжелая форма ДЦП) ... </p>
-                  <a href="#" class="request-item_big__link">Читать Далее</a>
-                </div>
-                <div class="request-item__person">
-                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
-                  <div class="request-item__person-name">
-                    Тамара Васильевна
-                    <span>Добавлено: 5 минут назад</span>
-                  </div>
-                </div>
-                <div class="request-item__map">
+                <div class="request-item__map js-item-map">
                   <div class="request-item__map-icon">
                     <div class="request-item__icon is-red">
                       <i><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12" height="17" viewBox="0 0 12 17"><defs><path id="ld9la" d="M853 3052c-3.3 0-6 2.8-6 6.26 0 .9.18 1.76.52 2.55 1.5 3.43 4.38 7.04 5.23 8.07.06.08.15.12.25.12s.19-.04.25-.12c.85-1.03 3.72-4.64 5.23-8.07.34-.8.52-1.65.52-2.55 0-3.45-2.7-6.26-6-6.26m0 9.51a3.2 3.2 0 0 1-3.12-3.25A3.2 3.2 0 0 1 853 3055a3.2 3.2 0 0 1 3.13 3.25 3.2 3.2 0 0 1-3.13 3.25"/></defs><g><g clip-path="url(#clip-FA960603-0DB5-4652-B56E-A380729D08D6)" transform="translate(-847 -3052)"><use fill="#fff" xlink:href="#ld9la"/></g></g></svg></i>
@@ -193,8 +91,129 @@
                 </div>
                 <div class="request-item__map-btn">
                   <img src="img/volonter/map-btn-icon.png" alt="">
-                  <a class="map-btn__show is-active" href="#">Смотреть на карте</a>
-                  <a class="map-btn__hide" href="#">Скрыть карту</a>
+                  <a class="map-btn__show js-item-map-show is-active" href="#">Смотреть на карте</a>
+                  <a class="map-btn__hide js-item-map-hide" href="#">Скрыть карту</a>
+                </div>
+                <div class="request-item__btn">
+                  <a href="#" class="btn-full btn-full_grad-orange"><span>Могу помочь</span></a>
+                </div>
+              </div>
+
+            </div>
+            <!-- end request-item -->
+
+            <!-- begin request-item -->
+            <div class="request-item request-item_big request-item_no-cols">
+
+
+              <div class="request-item_big__top">
+                <div class="request-item_big__title">
+                  <h4 class="h4 h4_md">Подвезти на машине</h4>
+                </div>
+                <div class="request-item_big__top-right">
+                  <div class="request-item__date">
+                    <p>До 12 февраля, 12:00</p>
+                  </div>
+                  <div class="request-item_big__link">
+                    <a href="#">Ссылка на конкретную заявку</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="request-item_big__block">
+                <div class="request-item__contacts">
+                  <div class="request-item__contacts-field">
+                    <div class="request-item__icon is-green"><i>A</i></div>
+                    <div class="request-item__contact">г.Москва, ул. Сиреневая, д.21</div>
+                  </div>
+                  <div class="request-item__contacts-field">
+                    <div class="request-item__icon is-gray"><i>B</i></div>
+                    <div class="request-item__contact">г.Москва, ул. Алтуфьевское шоссе, д.34</div>
+                  </div>
+                </div>
+                <div class="request-item__person">
+                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+                  <div class="request-item__person-name">
+                    Тамара Васильевна
+                    <span>Добавлено: 5 минут назад</span>
+                  </div>
+                </div>
+                <div class="request-item__map js-item-map">
+                  <div class="request-item__map-icon">
+                    <div class="request-item__icon is-red">
+                      <i><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12" height="17" viewBox="0 0 12 17"><defs><path id="ld9la" d="M853 3052c-3.3 0-6 2.8-6 6.26 0 .9.18 1.76.52 2.55 1.5 3.43 4.38 7.04 5.23 8.07.06.08.15.12.25.12s.19-.04.25-.12c.85-1.03 3.72-4.64 5.23-8.07.34-.8.52-1.65.52-2.55 0-3.45-2.7-6.26-6-6.26m0 9.51a3.2 3.2 0 0 1-3.12-3.25A3.2 3.2 0 0 1 853 3055a3.2 3.2 0 0 1 3.13 3.25 3.2 3.2 0 0 1-3.13 3.25"/></defs><g><g clip-path="url(#clip-FA960603-0DB5-4652-B56E-A380729D08D6)" transform="translate(-847 -3052)"><use fill="#fff" xlink:href="#ld9la"/></g></g></svg></i>
+                    </div>
+                    <div>Доставить из другой страны</div>
+                  </div>                  
+                  <div class="map map_in-item js-map" data-latitude="55.7555282" data-longitude="37.6144813"></div>
+                </div>
+                <div class="request-item__map-btn">
+                  <img src="img/volonter/map-btn-icon.png" alt="">
+                  <a class="map-btn__show js-item-map-show is-active" href="#">Смотреть на карте</a>
+                  <a class="map-btn__hide js-item-map-hide" href="#">Скрыть карту</a>
+                </div>
+                <div class="request-item__btn">
+                  <a href="#" class="btn-full btn-full_grad-orange"><span>Могу помочь</span></a>
+                </div>
+              </div>
+
+            </div>
+            <!-- end request-item -->
+
+            <!-- begin request-item -->
+            <div class="request-item request-item_big request-item_no-cols">
+
+
+              <div class="request-item_big__top">
+                <div class="request-item_big__title">
+                  <h4 class="h4 h4_md">Подвезти на машине</h4>
+                </div>
+                <div class="request-item_big__top-right">
+                  <div class="request-item__date">
+                    <p>До 12 февраля, 12:00</p>
+                  </div>
+                  <div class="request-item_big__link">
+                    <a href="#">Ссылка на конкретную заявку</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="request-item_big__block">
+                <div class="request-item__contacts">
+                  <div class="request-item__contacts-field">
+                    <div class="request-item__icon is-green"><i>A</i></div>
+                    <div class="request-item__contact">г.Москва, ул. Сиреневая, д.21</div>
+                  </div>
+                  <div class="request-item__contacts-field">
+                    <div class="request-item__icon is-gray"><i>B</i></div>
+                    <div class="request-item__contact">г.Москва, ул. Алтуфьевское шоссе, д.34</div>
+                  </div>
+                </div>
+                <div class="request-item_big__descr js-descr">
+                  <p>Подопечная семья (Юлия и Маша) детской выездной паллиативной службы в Москве едет в Курган на операцию ребенку с инвалидностью (тяжелая форма ДЦП). Нужна помощь по сопровождению (по перемещению) от аэропорта до больницы на такси или если будет возможность на личном автотранспорте. У семьи будет много вещей, а еще Маша на коляске, одна мама просто не справится. По Москве мы сможем сами организовать сопровождение до аэропорта. Возможно понадобится помощь во время пребывания семьи в Кургане, например купить продукты (за счет средств семьи), потому что Маша очень привязана к маме. Также нужна будет помощь по сопровождению семьи до аэропорта или ЖД вокзала после адаптации (об этом скорее всего сделаем новую заявку)</p>
+                </div>
+                <a href="#" class="request-item_big__link js-show-link">Читать Далее</a>
+                <a href="#" class="request-item_big__link js-hide-link">Скрыть</a>
+                <div class="request-item__person">
+                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+                  <div class="request-item__person-name">
+                    Тамара Васильевна
+                    <span>Добавлено: 5 минут назад</span>
+                  </div>
+                </div>
+                <div class="request-item__map js-item-map">
+                  <div class="request-item__map-icon">
+                    <div class="request-item__icon is-red">
+                      <i><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12" height="17" viewBox="0 0 12 17"><defs><path id="ld9la" d="M853 3052c-3.3 0-6 2.8-6 6.26 0 .9.18 1.76.52 2.55 1.5 3.43 4.38 7.04 5.23 8.07.06.08.15.12.25.12s.19-.04.25-.12c.85-1.03 3.72-4.64 5.23-8.07.34-.8.52-1.65.52-2.55 0-3.45-2.7-6.26-6-6.26m0 9.51a3.2 3.2 0 0 1-3.12-3.25A3.2 3.2 0 0 1 853 3055a3.2 3.2 0 0 1 3.13 3.25 3.2 3.2 0 0 1-3.13 3.25"/></defs><g><g clip-path="url(#clip-FA960603-0DB5-4652-B56E-A380729D08D6)" transform="translate(-847 -3052)"><use fill="#fff" xlink:href="#ld9la"/></g></g></svg></i>
+                    </div>
+                    <div>Доставить из другой страны</div>
+                  </div>                  
+                  <div class="map map_in-item js-map" data-latitude="55.7555282" data-longitude="37.6144813"></div>
+                </div>
+                <div class="request-item__map-btn">
+                  <img src="img/volonter/map-btn-icon.png" alt="">
+                  <a class="map-btn__show js-item-map-show is-active" href="#">Смотреть на карте</a>
+                  <a class="map-btn__hide js-item-map-hide" href="#">Скрыть карту</a>
                 </div>
                 <div class="request-item__btn">
                   <a href="#" class="btn-full btn-full_grad-orange"><span>Могу помочь</span></a>
@@ -211,7 +230,7 @@
           </div>
         </div>
 
-        <div class="all-applications__left js-tabs-content-item" data-tab="map">
+        <div class="all-applications__left js-tabs-item" data-tab="map">
           <div class="all-applications__mob-map">
             <div class="all-applications__modal-item is-open js-popup">
               <button class="all-applications__modal-item-close js-close-popup">
@@ -249,10 +268,19 @@
                       <span>Добавлено: 5 минут назад</span>
                     </div>
                   </div>
+                  <div class="request-item__map js-item-map">
+                  <div class="request-item__map-icon">
+                    <div class="request-item__icon is-red">
+                      <i><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12" height="17" viewBox="0 0 12 17"><defs><path id="ld9la" d="M853 3052c-3.3 0-6 2.8-6 6.26 0 .9.18 1.76.52 2.55 1.5 3.43 4.38 7.04 5.23 8.07.06.08.15.12.25.12s.19-.04.25-.12c.85-1.03 3.72-4.64 5.23-8.07.34-.8.52-1.65.52-2.55 0-3.45-2.7-6.26-6-6.26m0 9.51a3.2 3.2 0 0 1-3.12-3.25A3.2 3.2 0 0 1 853 3055a3.2 3.2 0 0 1 3.13 3.25 3.2 3.2 0 0 1-3.13 3.25"/></defs><g><g clip-path="url(#clip-FA960603-0DB5-4652-B56E-A380729D08D6)" transform="translate(-847 -3052)"><use fill="#fff" xlink:href="#ld9la"/></g></g></svg></i>
+                    </div>
+                    <div>Доставить из другой страны</div>
+                  </div>                  
+                  <div class="map map_in-item js-map" data-latitude="55.7555282" data-longitude="37.6144813"></div>
+                </div>
                   <div class="request-item__map-btn">
                     <img src="img/volonter/map-btn-icon.png" alt="">
-                    <a class="map-btn__show is-active" href="#">Смотреть на карте</a>
-                    <a class="map-btn__hide" href="#">Скрыть карту</a>
+                    <a class="map-btn__show js-item-map-show is-active" href="#">Смотреть на карте</a>
+                    <a class="map-btn__hide js-item-map-hide" href="#">Скрыть карту</a>
                   </div>
                   <div class="request-item__btn">
                     <a href="#" class="btn-full btn-full_grad-orange"><span>Могу помочь</span></a>
@@ -304,6 +332,7 @@
 </div>
 <!-- END out-->
 //=include partials/popups.html
+//=include partials/popups-volonter.html
 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 <script src="js/new-app-2.js"></script>
 </body>
