add some js, browser issues

--- a/src/dislife-account-volonter-user.html
+++ b/src/dislife-account-volonter-user.html
@@ -56,15 +56,22 @@
                 <div class="applications-section__filter-tags">
                   <!-- begin filter-tags -->
                   <div class="filter-tags has-no-padding">
-                    <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller" data-target-tab="approved">
-                      <span class="filter-tag__lable">Вы выбраны <span>(2)</span></span>
-                    </button>
-                    <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller" data-target-tab="wait">
-                      <span class="filter-tag__lable">Ожидают подтверждения <span>(2)</span></span>
-                    </button>
-                    <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller is-active" data-target-tab="all">
-                      <span class="filter-tag__lable">Все <span>(4)</span></span>
-                    </button>
+                    <div class="filter-tag__wrap">
+                      <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller"  data-target-tab="approved">
+                        <span class="filter-tag__lable">Вы выбраны <span>(2)</span></span>      
+                      </button>
+                    </div>
+                    <div class="filter-tag__wrap">
+                      <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller"  data-target-tab="wait">
+                        <span class="filter-tag__lable">Ожидают подтверждения <span>(2)</span></span>      
+                      </button>
+                    </div>
+                    <div class="filter-tag__wrap">
+                      <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller is-active"  data-target-tab="all">
+                        <span class="filter-tag__lable">Все <span>(4)</span></span>      
+                      </button>
+                    </div>
+
                   </div>
                   <!-- end filter-tags -->
                 </div>
