--- a/src/dislife-account-volonter-user.html
+++ b/src/dislife-account-volonter-user.html
@@ -56,17 +56,17 @@
                 <div class="applications-section__filter-tags">
                   <!-- begin filter-tags -->
                   <div class="filter-tags has-no-padding">
-                    <div class="filter-tag__wrap">
+                    <div class="filter-tag__wrap is-mob-full">
                       <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller"  data-target-tab="approved">
                         <span class="filter-tag__lable">Вы выбраны <span>(2)</span></span>      
                       </button>
                     </div>
-                    <div class="filter-tag__wrap">
+                    <div class="filter-tag__wrap is-mob-full">
                       <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller"  data-target-tab="wait">
                         <span class="filter-tag__lable">Ожидают подтверждения <span>(2)</span></span>      
                       </button>
                     </div>
-                    <div class="filter-tag__wrap">
+                    <div class="filter-tag__wrap is-mob-full">
                       <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller is-active"  data-target-tab="all">
                         <span class="filter-tag__lable">Все <span>(4)</span></span>      
                       </button>
