--- a/src/dislife-account-volonter.html
+++ b/src/dislife-account-volonter.html
@@ -9,6 +9,7 @@
 <!-- BEGIN  out-->
 <div class="out">
   //=include partials/header-user.html
+  //=include partials/topbar.html
   <div class="user-container user-container_mod">
     <div class="user-row">
       <div class="user-left">
