upd container, header layout; small edits

--- a/src/dislife-account-volonter.html
+++ b/src/dislife-account-volonter.html
@@ -8,7 +8,7 @@
 <body>
 <!-- BEGIN  out-->
 <div class="out">
-  //=include partials/header-user.html
+  //=include partials/header--container-user.html
   //=include partials/topbar.html
   <div class="user-container user-container_mod">
     <div class="user-row">
