--- a/src/dislife-all-applications.html
+++ b/src/dislife-all-applications.html
@@ -8,7 +8,7 @@
 <body>
 <!-- BEGIN  out-->
 <div class="out">
-  //=include partials/header.html
+  //=include partials/header-container.html
   //=include partials/topbar.html
 
   <!-- begin section-filters-block -->
@@ -192,8 +192,8 @@
                 <div class="request-item_big__descr js-descr">
                   <p>Подопечная семья (Юлия и Маша) детской выездной паллиативной службы в Москве едет в Курган на операцию ребенку с инвалидностью (тяжелая форма ДЦП). Нужна помощь по сопровождению (по перемещению) от аэропорта до больницы на такси или если будет возможность на личном автотранспорте. У семьи будет много вещей, а еще Маша на коляске, одна мама просто не справится. По Москве мы сможем сами организовать сопровождение до аэропорта. Возможно понадобится помощь во время пребывания семьи в Кургане, например купить продукты (за счет средств семьи), потому что Маша очень привязана к маме. Также нужна будет помощь по сопровождению семьи до аэропорта или ЖД вокзала после адаптации (об этом скорее всего сделаем новую заявку)</p>
                 </div>
-                <a href="#" class="request-item_big__link js-show-link">Читать Далее</a>
-                <a href="#" class="request-item_big__link js-hide-link">Скрыть</a>
+                <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
+                <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
                 <div class="request-item__person">
                   <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
                   <div class="request-item__person-name">
