--- a/src/dislife-all-applications.html
+++ b/src/dislife-all-applications.html
@@ -83,7 +83,10 @@
                   <div class="map map_in-item js-map" data-latitude="55.7555282" data-longitude="37.6144813" data-icon-title="Подвезти на машине"></div>
                 </div>
                 <div class="request-item__person">
-                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                    <div class="request-item__img-icon is-active"><i class="fa fa-check"></i></div>
+                    <div class="request-item__tooltip is-active">Lorem ipsum dolor.</div>
+                  </div>
                   <div class="request-item__person-name">
                     Тамара Васильевна
                     <span>Добавлено: 5 минут назад</span>
@@ -141,7 +144,10 @@
                   <div class="map map_in-item js-map" data-latitude="55.7555282" data-longitude="37.6144813" data-icon-title="Подвезти на машине"></div>
                 </div>
                 <div class="request-item__person">
-                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                    <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+                    <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                  </div>
                   <div class="request-item__person-name">
                     Тамара Васильевна
                     <span>Добавлено: 5 минут назад</span>
@@ -204,7 +210,10 @@
                   <div class="map map_in-item js-map" data-latitude="55.7555282" data-longitude="37.6144813" data-icon-title="Подвезти на машине"></div>
                 </div>
                 <div class="request-item__person">
-                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                    <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+                    <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                  </div>
                   <div class="request-item__person-name">
                     Тамара Васильевна
                     <span>Добавлено: 5 минут назад</span>
@@ -264,7 +273,10 @@
                   </div>
 
                   <div class="request-item__person">
-                    <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+                    <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                      <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+                      <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                    </div>
                     <div class="request-item__person-name">
                       Тамара Васильевна
                       <span>Добавлено: 5 минут назад</span>
@@ -315,7 +327,10 @@
                   </div>
 
                   <div class="request-item__person">
-                    <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+                    <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                      <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+                      <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                    </div>
                     <div class="request-item__person-name">
                       Тамара Васильевна
                       <span>Добавлено: 5 минут назад</span>
@@ -366,7 +381,10 @@
                   </div>
 
                   <div class="request-item__person">
-                    <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+                    <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                      <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+                      <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                    </div>
                     <div class="request-item__person-name">
                       Тамара Васильевна
                       <span>Добавлено: 5 минут назад</span>
