--- a/src/dislife-account-volonter-user.html
+++ b/src/dislife-account-volonter-user.html
@@ -9,7 +9,7 @@
   <!-- BEGIN  out-->
   <div class="out">
     //=include partials/header-container-user.html
-    //=include partials/topbar.html
+    <!-- //=include partials/topbar.html -->
     <div class="user-container user-container_mod">
       <div class="user-row">
         <div class="user-left">
