--- a/src/dislife-main-volonter.html
+++ b/src/dislife-main-volonter.html
@@ -78,9 +78,9 @@
           <a href="#" class="request-item">
             <div class="request-item__title">Помочь добраться на авто</div>
             <div class="request-item__person">
-              <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+              <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
                 <div class="request-item__img-icon is-active"><i class="fa fa-check"></i></div>
-                <div class="request-item__tooltip is-active">Lorem ipsum dolor.</div>
+                <div class="tooltip js-tooltip is-active">Lorem ipsum dolor.</div>
               </div>
               <div class="request-item__person-name">
                 Тамара Васильевна
@@ -105,9 +105,9 @@
           <a href="#" class="request-item">
             <div class="request-item__title">Помочь добраться на авто</div>
             <div class="request-item__person">
-              <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+              <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
                 <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-                <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
               </div>
               <div class="request-item__person-name">
                 Тамара Васильевна
@@ -130,9 +130,9 @@
           <a href="#" class="request-item">
             <div class="request-item__title">Помочь добраться на авто</div>
             <div class="request-item__person">
-              <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+              <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
                 <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-                <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
               </div>
               <div class="request-item__person-name">
                 Тамара Васильевна
@@ -157,9 +157,9 @@
           <a href="#" class="request-item">
             <div class="request-item__title">Помочь добраться на авто</div>
             <div class="request-item__person">
-              <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+              <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
                 <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-                <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
               </div>
               <div class="request-item__person-name">
                 Тамара Васильевна
