--- a/src/dislife-all-applications.html
+++ b/src/dislife-all-applications.html
@@ -83,9 +83,9 @@
                   <div class="map map_in-item js-map" data-latitude="55.7555282" data-longitude="37.6144813" data-icon-title="Подвезти на машине"></div>
                 </div>
                 <div class="request-item__person">
-                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                  <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
                     <div class="request-item__img-icon is-active"><i class="fa fa-check"></i></div>
-                    <div class="request-item__tooltip is-active">Lorem ipsum dolor.</div>
+                    <div class="tooltip js-tooltip is-active">Lorem ipsum dolor.</div>
                   </div>
                   <div class="request-item__person-name">
                     Тамара Васильевна
@@ -144,9 +144,9 @@
                   <div class="map map_in-item js-map" data-latitude="55.7555282" data-longitude="37.6144813" data-icon-title="Подвезти на машине"></div>
                 </div>
                 <div class="request-item__person">
-                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                  <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
                     <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-                    <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                    <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
                   </div>
                   <div class="request-item__person-name">
                     Тамара Васильевна
@@ -210,9 +210,9 @@
                   <div class="map map_in-item js-map" data-latitude="55.7555282" data-longitude="37.6144813" data-icon-title="Подвезти на машине"></div>
                 </div>
                 <div class="request-item__person">
-                  <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                  <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
                     <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-                    <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                    <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
                   </div>
                   <div class="request-item__person-name">
                     Тамара Васильевна
@@ -273,9 +273,9 @@
                   </div>
 
                   <div class="request-item__person">
-                    <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                    <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
                       <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-                      <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                      <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
                     </div>
                     <div class="request-item__person-name">
                       Тамара Васильевна
@@ -327,9 +327,9 @@
                   </div>
 
                   <div class="request-item__person">
-                    <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                    <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
                       <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-                      <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                      <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
                     </div>
                     <div class="request-item__person-name">
                       Тамара Васильевна
@@ -381,9 +381,9 @@
                   </div>
 
                   <div class="request-item__person">
-                    <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+                    <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
                       <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-                      <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+                      <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
                     </div>
                     <div class="request-item__person-name">
                       Тамара Васильевна
