--- a/src/dislife-account-volonter-user.html
+++ b/src/dislife-account-volonter-user.html
@@ -20,7 +20,7 @@
 
               <div class="profile-menu-mob">
                 <div class="select select_volonter js-select">
-                  <div class="select__text js-select-text">Заявки <small>(4)</small></div>
+                  <div class="select__text js-select-text">Мои заявки <small>(4)</small></div>
                   <div class="select__icon"></div>
                   <ul class="select__list js-select-list">
                     <li data-val="value1">Волонтер</li>
@@ -94,8 +94,14 @@
               <ul class="service-menu service-menu_mod">
                 <li class="service-menu__item js-toggle">
                   <a href="#" class="service-menu__link js-toggle-button"><span>Волонтер</span></a>
-                  <ul class="service-menu__submenu js-toggle-container">
+                  <!-- <ul class="service-menu__submenu js-toggle-container">
                     <li><a href="#" class="is-active"><span>Мои заявки<small>(4)</small></span></a></li>
+                    <li><a href="#"><span>Сообщения<small>(+1)</small></span></a></li>
+                  </ul> -->
+                </li>
+                <li class="service-menu__item js-toggle">
+                  <a href="#" class="service-menu__link is-active js-toggle-button"><span>Мои заявки<small>(4)</small></span></a>
+                  <ul class="service-menu__submenu js-toggle-container">
                     <li><a href="#"><span>Сообщения<small>(+1)</small></span></a></li>
                   </ul>
                 </li>
