--- a/src/dislife-account-volonter-user.html
+++ b/src/dislife-account-volonter-user.html
@@ -59,12 +59,12 @@
                   <div class="filter-tags has-no-padding">
                     <div class="filter-tag__wrap is-mob-full">
                       <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller"  data-target-tab="approved">
-                        <span class="filter-tag__lable">Вы выбраны <span>(2)</span></span>      
+                        <span class="filter-tag__lable">Опубликованные <span>(2)</span></span>      
                       </button>
                     </div>
                     <div class="filter-tag__wrap is-mob-full">
                       <button class="filter-tag filter-tag_mob-full js-tabs-btn is-fz-smaller"  data-target-tab="wait">
-                        <span class="filter-tag__lable">Ожидают подтверждения <span>(2)</span></span>      
+                        <span class="filter-tag__lable">Волонтер ожидает вашего подтверждения <span>(2)</span></span>      
                       </button>
                     </div>
                     <div class="filter-tag__wrap is-mob-full">
